css/style.css
/* ... */
#search input:focus {outline: none; }
#search .input_wrapper { float: left; width: 220px; height: 26px; overflow-y: hidden; padding-left: 5px; }
#search.empty .input_wrapper { width: 145px; }
.input_wrapper input { width: 100%; height: 100%; border-width: 0px; background-color: transparent; }

/* copyright footer */
#copyright { font-size: 85%; text-align: center; margin: 1em 0px; color: #dcdcdc; }
#copyright a { color: #dcdcdc; text-decoration: underline; }


/* post styles */
.post { position: relative; margin-bottom: 3em; min-height: 300px; }
.post_first { margin-bottom: 1.5em; }
.post .post_header { clear: both; vertical-align: middle; margin-bottom: 1em; }
.post h2 { font-family: 'Arvo', 'Arial Black', 'Arial', 'Helvetica', 'sans-serif'; font-size: 166%; text-decoration: none; }
.post h2 a { color: #333; text-decoration: none; }
.post h2 a:hover { color: #333; text-decoration: none; }

.post .post_header h2 { border-bottom: 1px solid #aaa; }
.post .post_header h3.subtitle { font-family: 'Arvo', 'Arial Black', 'Arial', 'Helvetica', 'sans-serif'; font-size: 120%; text-decoration: none; margin: 0.25em 0px; }

.post .post_info { position: absolute; left: -84px; top: 0px; background-color: #ccc; border: 1px solid #aaa; border-right-width: 0px; -moz-border-radius: 5px 0px 0px 5px; -webkit-border-radius: 5px 0px 0px 5px; border-radius: 5px 0px 0px 5px; z-index: 90; width: 62px; }
.post .post_info >  div { text-align: center; padding: 5px; }
.post .post_info .top_link { display: none; text-transform: uppercase; font-size: 85%; font-weight: bold; background-color: #444; -moz-border-radius: 0px 0px 0px 5px; -webkit-border-radius: 0px 0px 0px 5px; border-radius: 0px 0px 0px 5px; }
.post .post_info .top_link a { display: block; color: #eee; text-decoration: none; }
.post .post_info .post_date { background-color: #ccc; border-radius: 5px 0px 0px; }
.post .post_info .post_comments { overflow: hidden; border-radius: 0px 0px 0px 0px; background-color: #dedede; }
.post .post_info .post_comments span.small { font-size: 77%; }
.post .post_info .post_comments a { text-decoration: none; color: #333; }
.post .post_info .post_social { background-color: #ccc; border-radius: 0px 0px 0px 5px; text-align: center; }
.post .post_info .post_social div.aligncenter span { margin: 0px auto; display: block; margin-bottom: 10px; width: 50px; }
.post .post_info div span.big { font-size: 24px; font-weight: bold; display: block; line-height: 24px; }
.post .post_info div span.small { font-size: 12px; font-weight: normal; text-transform: uppercase; display: block; line-height: 12px; }

.post .content { clear: both; margin: 1em 0px; }
.post .content p { margin: 1em 0px; text-align: justify; font-size: 108%; }

.post .content .aligncenter { margin: 0px auto; display: block; }
.post .content .alignleft { margin: 10px 10px 10px 0px; float: left; display: block; }
.post .content .alignright { margin: 10px 0px 10px 10px; float: right; display: block; }

.post .content .wp-caption { background-color: #ddd; }
.post .content .wp-caption img { padding: 5px; }
.post .content p.wp-caption-text { margin: 0px; padding: 0px 5px 5px; font-size: 93%; }

.post .content ul, .post .content ol { padding-left: 30px; }
.post .content ul li { text-align: justify; list-style-type: disc; font-size: 108%; }
.post .content ul li > p, .post .content ol li > p { font-size: 100%; }
.post .content ol li { text-align: justify; list-style-type: decimal; font-size: 108%; }


.post .content blockquote { background-color: #CDCDCD; font-style: italic; margin: 10px; padding: 0 10px; overflow: hidden; }
.post .content blockquote p { }

.post a { text-decoration: underline; color: #369; }
.post a:hover { text-decoration: none; color: #369; }

.post .content h2, .post .content h3, .post .content h4 { font-family: 'Arvo', 'Arial Black', 'Arial', 'Helvetica', 'sans-serif'; margin: 1em 0px; }
.post .content h2 { font-size: 150%; }
.post .content h3 { font-size: 135%; }
.post .content h4 { font-size: 120%; }

.post .content hr { height: 0px; border-width: 1px 0px 0px 0px; border-top: 1px solid #aaa; }

.post .meta { background-color: #ddd; border-radius: 2px; -moz-border-radius: 2px; -webkit-border-radius: 2px; width: 100%; overflow: hidden; position: relative; }
.post .more-link { background-color: #333; float: right; white-space: nowrap; height: 100%; vertical-align: middle; top: 0; bottom: 0; position: absolute; right: 0px; text-align: right; width: 90px; }
.post .more-link a { color: #eee; text-decoration: none; font-weight: bold; display: block; padding: 5px; }
.post .tags { padding: 5px; background-color: #ddd; width: 465px; min-height: 17px; }
.post .original { margin: 0px 0px 1em; font-style: italic; clear: both; }

.post .content ul.nobullet { padding: 0px; }
.post .content ul.nobullet li { list-style-type: none; }

.page .post_info { display: none; }

.post hr.recommendation-divider { border-top-style: dashed; }
.post .recommendations { background-color: white; }

/* recommendations */
#interstitial_recommendations { margin: 1.5em 0px; overflow: hidden; padding: 0.75em 0px; border: 1px dashed #aaa; border-width: 1px 0px; }
#interstitial_recommendations .container { margin: 0px; background-color: #f9f9f9; overflow: hidden; }

/* comments */
#comments h1 { font-size: 150%; border-bottom: 1px solid #aaa; }

/* pagination */
#pagination .prev { float: left; }
#pagination .next { float: right; }
#pagination div { background-color: #ddd; padding: 3px 5px; border: 1px solid #aaa; width: 80px; text-align: center; }
#pagination a { color: #333; font-weight: bold; border-radius: 1px; -moz-border-radius: 1px; -webkit-border-radius: 1px; text-decoration: none; }

/* sidebar styles */
.widget { margin: 0px 0px 2em; }

#sidebar h2.widgettitle { font-family: 'Arvo', 'Arial Black', 'Arial', 'Helvetica', 'sans-serif'; font-size: 166%; font-weight: bold; border-bottom: 1px solid #aaa; margin-bottom: 0.5em; }

#sidebar a { text-decoration: underline; color: #369; }
/* ... */

